# app/Http/Controllers/PurchaseOrderLinesApprovedPendingReceivalViewController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers;
 
 use App\PurchaseOrderLinesApprovedPendingReceivalView;
 use Illuminate\Http\Request;
+use Yajra\DataTables\Facades\DataTables;
 
 class PurchaseOrderLinesApprovedPendingReceivalViewController extends Controller
 {
@@ -12,9 +13,20 @@ class PurchaseOrderLinesApprovedPendingReceivalViewController extends Controller
      *
      * @return \Illuminate\Http\Response
      */
-    public function index()
+    public function index(Request $request)
     {
-        //
+        if ($request->ajax()) {
+            $data = PurchaseOrderLinesApprovedPendingReceivalView::select('OrderID','ItemID','OrderUnit')->get();
+            return Datatables::of($data)
+                ->addIndexColumn()
+                ->addColumn('action', function($row){
+                    $btn = '<a href="javascript:void(0)" class="edit btn btn-primary btn-sm">View</a>';
+                    return $btn;
+                })
+                ->rawColumns(['action'])
+                ->make(true);
+        }
+        return view('orders-pending.index');
     }
 
     /**
