# storage/api-docs/api-docs.json
@@ -24,10 +24,34 @@
                 }
             }
         },
+        "/api/v2/pending-receival/supplier-id/{supplierId}": {
+            "get": {
+                "tags": [
+                    "Supplier "
+                ],
+                "summary": "All Purchase Orders Pending Receival By a Particuler Supplier",
+                "operationId": "App\\Http\\Controllers\\ApiController::getAllApprovalPendingReceivalBySupplierID",
+                "parameters": [
+                    {
+                        "name": "supplierId",
+                        "in": "path",
+                        "description": "Provide supplier Id as a parameter",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Get All Purchase Orders Pending Receival"
+                    }
+                }
+            }
+        },
         "/api/v1/pending-receival/{orderId}": {
             "get": {
                 "tags": [
-                    "Purchase Order"
+                    "Pending Purchase Order"
                 ],
                 "summary": "Get Purchase Orders Pending Receival by Purchase Order No.",
                 "operationId": "App\\Http\\Controllers\\ApiController::getOneApprovalPendingReceival",
@@ -46,7 +70,33 @@
                         "description": "Get All Purchase Orders Pending Receival"
                     }
                 }
-            },
+            }
+        },
+        "/api/v2/pending-receival/{PONo}": {
+            "get": {
+                "tags": [
+                    "Pending Purchase Order"
+                ],
+                "summary": "Get Purchase Orders Pending Receival by Purchase Order No.",
+                "operationId": "App\\Http\\Controllers\\ApiController::getOneApprovalPendingReceivalV2",
+                "parameters": [
+                    {
+                        "name": "PONo",
+                        "in": "path",
+                        "description": "Provider Purchase Order No a parameter",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Get All Purchase Orders Pending Receival"
+                    }
+                }
+            }
+        },
+        "/api/v1/pending-receival/{PONo}": {
             "post": {
                 "tags": [
                     "Purchase Order"
@@ -55,7 +105,7 @@
                 "operationId": "App\\Http\\Controllers\\ApiController::updateApprovalPendingReceival",
                 "parameters": [
                     {
-                        "name": "orderId",
+                        "name": "PONo",
                         "in": "path",
                         "description": "Provider Purchase Order No a parameter",
                         "required": true,
@@ -69,6 +119,9 @@
                         "application/json": {
                             "schema": {
                                 "properties": {
+                                    "PONo": {
+                                        "type": "string"
+                                    },
                                     "ItemID": {
                                         "type": "string"
                                     },
@@ -89,17 +142,37 @@
                                     },
                                     "OrderID": {
                                         "type": "string"
+                                    },
+                                    "SupplierID": {
+                                        "type": "string"
+                                    },
+                                    "OrderUnit": {
+                                        "type": "string"
+                                    },
+                                    "ItemQuantity": {
+                                        "type": "string"
+                                    },
+                                    "QuantityOrdered": {
+                                        "type": "string"
                                     }
                                 },
                                 "type": "object",
                                 "example": {
+                                    "PONo": "03592018",
                                     "ItemID": "D22231",
                                     "UnitCost": "1392813",
                                     "StockLevel": "223",
                                     "ExpiryDate": "2020-01-31 00:00:00.000",
                                     "BatchNo": "237372",
                                     "StoreID": "ST3372",
-                                    "OrderID": "234543"
+                                    "OrderID": "234543",
+                                    "Description": "Table of Bla bla",
+                                    "SupplierID": "3244",
+                                    "OrderUnit": "TABLETS",
+                                    "ItemQuantity": "2000.78",
+                                    "QuantityOrdered": "3994.89",
+                                    "OrderLineID": "1",
+                                    "OrderUnitID": 1
                                 }
                             }
                         }
@@ -112,7 +185,7 @@
                 }
             }
         },
-        "/api/v1/save-stored/{orderId}/{itemId}": {
+        "/api/v1/save-stored/{PONo}/{itemId}": {
             "post": {
                 "tags": [
                     "Purchase Order"
@@ -121,7 +194,7 @@
                 "operationId": "App\\Http\\Controllers\\ApiController::saveAllCompletedPurchaseOrder",
                 "parameters": [
                     {
-                        "name": "orderId",
+                        "name": "PONo",
                         "in": "path",
                         "description": "Supplier Purchase Order No a parameter",
                         "required": true,
@@ -183,7 +256,7 @@
                 }
             }
         },
-        "/api/v1/pending-check/{orderId}": {
+        "/api/v1/pending-check/{PONo}": {
             "get": {
                 "tags": [
                     "Purchase Order"
@@ -192,7 +265,7 @@
                 "operationId": "App\\Http\\Controllers\\ApiController::getAllReceivalPending",
                 "parameters": [
                     {
-                        "name": "orderId",
+                        "name": "PONo",
                         "in": "path",
                         "description": "Provider Purchase Order No a parameter",
                         "schema": {
@@ -238,6 +311,77 @@
                 "responses": {
                     "200": {
                         "description": "OK"
+                    }
+                }
+            }
+        },
+        "/api/v1/received-orders": {
+            "get": {
+                "tags": [
+                    "Received Purchase Orders"
+                ],
+                "summary": "All Received Purchase Orders",
+                "operationId": "getAllReceivedOrder",
+                "responses": {
+                    "200": {
+                        "description": "Get All Received Purchase Orders"
+                    }
+                }
+            }
+        },
+        "/api/v1/received-orders/{orderId}": {
+            "get": {
+                "tags": [
+                    "Received Purchase Orders"
+                ],
+                "summary": "All Received Purchase Orders by Order No",
+                "operationId": "getOneReceivedOrder",
+                "parameters": [
+                    {
+                        "name": "orderId",
+                        "in": "path",
+                        "description": "Provide Purchase Order No as a parameter",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Get All Received Purchase Orders by Order No"
+                    }
+                }
+            }
+        },
+        "/api/v2/save-receive-orders/{PONo}/{itemId}": {
+            "get": {
+                "tags": [
+                    "Received Purchase Orders"
+                ],
+                "summary": " Saves Purchase Orders after Checks.",
+                "operationId": "saveReceivedOrder",
+                "parameters": [
+                    {
+                        "name": "PONo",
+                        "in": "path",
+                        "description": "Provide a Purchase Order No as a parameter",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "itemId",
+                        "in": "path",
+                        "description": "Provide an item Id No as a parameter",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Saves Purchase Orders after Checks"
                     }
                 }
             }
